fix: fix the emoji alignment

--- a/assets/scss/_test3.scss
+++ b/assets/scss/_test3.scss
@@ -1407,3 +1407,7 @@ strong {
     text-align: end;
 }
 
+.emoji--fix {
+    margin-bottom: -6px;
+}
+
